--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
-  "name": "odf",
-  "version": "3.0.1",
-  "description": "Open modified files in the current git repo.",
-  "main": "odf",
-  "bin": "odf",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pablopunk/odf.git"
-  },
-  "keywords": [
-    "files",
-    "git",
-    "modified",
-    "open",
-    "editor",
-    "bash"
-  ],
-  "author": "Pablo Varela",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/pablopunk/odf/issues"
-  },
-  "homepage": "https://github.com/pablopunk/odf#readme"
+	"name": "odf",
+	"version": "3.0.2",
+	"description": "Open modified files in the current git repo.",
+	"main": "odf",
+	"bin": "odf",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/pablopunk/odf.git"
+	},
+	"keywords": ["files", "git", "modified", "open", "editor", "bash"],
+	"author": "Pablo Varela",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/pablopunk/odf/issues"
+	},
+	"homepage": "https://github.com/pablopunk/odf#readme"
 }
